# amaciver-arcade

./: .gitignore  API_SETUP_GUIDE.md  ARCADE_LEARNINGS.md  DEVELOPMENT_NOTES.md  MEOW_ART_PLAN.md  README.md  SETUP_INSTRUCTIONS.md  claude.md
api_testing/: README.md  google_places_test.py  pyproject.toml
meow_me/: DEVELOPMENT_NOTES.md  README.md  pyproject.toml
meow_me/evals/: README.md  eval_meow_me.py
meow_me/scripts/: test_upload.py
meow_me/src/meow_me/: .env.example  __init__.py  __main__.py  agent.py  server.py
meow_me/src/meow_me/tools/: avatar.py  facts.py  image.py  slack.py
meow_me/tests/: conftest.py  test_agent.py  test_avatar.py  test_evals.py  test_facts.py  test_image.py  test_slack.py
sushi_scout/: README.md  pyproject.toml  test_oauth_flow.py
sushi_scout/src/sushi_scout/: .env.example  __main__.py  agent.py  server.py
sushi_scout/src/sushi_scout/tools/: menu.py  ordering.py  search.py
sushi_scout/tests/: conftest.py  test_evals.py  test_menu.py  test_ordering.py  test_search.py
