[project]
name = "sushi-scout-api-testing"
version = "0.1.0"
description = "API testing scripts for sushi-scout project"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
