[project]
name = "meow_me"
version = "0.1.0"
description = "Meow Art: cat-fact-inspired art agent powered by MCP + OpenAI + Arcade.dev"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp-server>=1.11.1,<2.0.0",
    "arcadepy>=1.8.0",
    "httpx>=0.28.0,<1.0.0",
    "openai>=1.82.1",
    "openai-agents>=0.0.17",
    "pillow>=12.1.1",
]

[project.optional-dependencies]
dev = [
    "arcade-mcp[all,evals]>=1.9.0,<2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

# Tell Arcade.dev that this package has Arcade tools
[project.entry-points.arcade_toolkits]
toolkit_name = "meow_me"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meow_me"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = false
